--- a/src/static/style/App.css
+++ b/src/static/style/App.css
@@ -1,8 +1,10 @@
-.App {
+/* .App {
   text-align: center;
-}
+  display: flex;
+  justify-content: center;
+} */
 
-.App-logo {
+/*.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
